# doc/api.yaml
@@ -416,7 +416,7 @@ paths:
               application/json:
                 schema:
                   $ref: "#/components/schemas/Error"
-    /users/search/{username}:
+    /users/{username}/search:
       get:
         tags:
           - user management
@@ -742,7 +742,7 @@ paths:
               application/json:
                 schema:
                   $ref: "#/components/schemas/Error"
-    /photos/{photoId}/comments/{commentId}:
+    /comments/{commentId}:
       parameters:
         - name: photoId
           in: path
@@ -801,101 +801,6 @@ paths:
         summary: Delete Photo Comment
         description: Delete a comment for a photo
         operationId: uncommentPhoto
-        security:
-          - bearerAuth: []
-        responses:
-          200:
-            description: Successful operation
-            content:
-              application/json:
-                schema:
-                  $ref: "#/components/schemas/Comment"
-          400:
-            description: Invalid photoId or commentId supplied
-            content:
-              application/json:
-                schema:
-                  $ref: "#/components/schemas/Error"
-          404:
-            description: Photo or comment not found
-            content:
-              application/json:
-                schema:
-                  $ref: "#/components/schemas/Error"
-          500:
-            description: Internal Server Error
-            content:
-              application/json:
-                schema:
-                  $ref: "#/components/schemas/Error"
-    /photos/{photoId}/comments/{commentId}/like/{userId}:
-      parameters:
-        - name: photoId
-          in: path
-          description: ID of the photo that needs to be commented
-          required: true
-          schema:
-            type: string
-            pattern: "[A-Za-z0-9]*"
-            minLength: 5
-            maxLength: 5
-        - name: commentId
-          in: path
-          description: ID of the comment that needs to be liked
-          required: true
-          schema:
-            type: string
-            pattern: "[A-Za-z0-9]*"
-            minLength: 5
-            maxLength: 5
-        - name: userId
-          in: path
-          description: ID of the user that needs to like the comment
-          required: true
-          schema:
-            type: string
-            pattern: "[A-Za-z0-9]*"
-            minLength: 5
-            maxLength: 5
-      post:
-        tags:
-          - photos
-        summary: Like Photo Comment
-        description: Like a comment for a photo
-        operationId: likePhotoComment
-        security:
-          - bearerAuth: []
-        responses:
-          201:
-            description: Successful operation
-            content:
-              application/json:
-                schema:
-                  $ref: "#/components/schemas/Comment"
-          400:
-            description: Invalid photoId or commentId supplied
-            content:
-              application/json:
-                schema:
-                  $ref: "#/components/schemas/Error"
-          404:
-            description: Photo or comment not found
-            content:
-              application/json:
-                schema:
-                  $ref: "#/components/schemas/Error"
-          500:
-            description: Internal Server Error
-            content:
-              application/json:
-                schema:
-                  $ref: "#/components/schemas/Error"
-      delete:
-        tags:
-          - photos
-        summary: Unlike Photo Comment
-        description: Unlike a comment for a photo
-        operationId: unlikePhotoComment
         security:
           - bearerAuth: []
         responses:
